[package]
name = "goobie-mysql"
version = "1.1.0"
edition = "2024"

[lib]
name = "gmsv_goobie_mysql"
crate-type = ["cdylib"]

[dependencies]
gmodx = { version = "0.10.0", features = ["tokio-tasks", "send"] }
tokio = { version = "1.47.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
anyhow = "1.0.96"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "rust_decimal",
    "chrono",
] }
openssl-sys = { version = "0.9.109", features = ["vendored"] }
const_format = "0.2.34"
tokio-util = { version = "0.7.16", features = ["rt"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
