[package]
name = "goobie-mysql"
version = "4.1.0"
edition = "2024"

[lib]
name = "gmsv_goobie_mysql"
crate-type = ["cdylib"]

[dependencies]
gmodx = { git = "https://github.com/Srlion/gmodx-rs.git", rev = "5d1b46d", features = [
    "rust_decimal",
    "tokio",
    "send",
] }
tokio = { version = "1.49.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
anyhow = "1.0.100"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "rust_decimal",
    "chrono",
] }
openssl-sys = { version = "0.9.111", features = ["vendored"] }
const_format = "0.2.35"
tokio-util = { version = "0.7.18", features = ["rt"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
